[project]
name = "mcp-server-stealth-fetch"
version = "0.1.0"
description = "MCP server for fetching web content via httpcloak (per-domain sessions, rate-limited)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["mcp", "http", "httpcloak", "fetch", "llm"]
dependencies = [
    "httpcloak==1.6.1",
    "markdownify==1.2.2",
    "mcp==1.26.0",
    "pydantic==2.12.5",
    "readabilipy==0.3.0",
]

[project.scripts]
mcp-server-stealth-fetch = "mcp_server_stealth_fetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
